fix: positions the active state text to the left of the screen on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -233,6 +233,7 @@ span.underline {
   text-transform: uppercase;
   position: absolute;
   line-height: 0.7;
+  left: 0;
   top: 50%;
   transform: translate(0, -50%);
   writing-mode: vertical-rl;
